base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: rails
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: dockerhub-secret-api

---

apiVersion: v1
kind: Service
metadata:
  name: api
  annotations:
    cloud.google.com/backend-config: '{"default": "api-backendconfig"}'
  labels:
    app: api
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: api
