base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: api
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web
                port:
                  number: 3001
